<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">\ Contacts Now</string>
    <string name="app_version">Version 1.0</string>
    <string name="title_activity_contact_information">Contact Information</string>
    <string name="title_activity_contact_edit">Contact Edit</string>
    <string name="title_activity_contact_add">New Contact</string>
    <string name="action_settings">Settings</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Accessibility -->
    <string name="accessibility_contactphoto">Contact Photo</string>
    <string name="accessibility_contactname">Contact Name</string>
    <string name="accessibility_editsdiscarded">Edits Discarded</string>
    <string name="accessibility_error">Error Occurred</string>
    <string name="accessibility_showdatepickerdialog">Show Date Picker Dialog</string>
    <string name="accessibility_searchaddress">Search Address in Maps</string>
    <string name="accessibility_sendemailtocontact">Send Email To Contact</string>
    <string name="accessibility_callcontact">Call Contact</string>
    <string name="accessibility_sendmessage">Send Message</string>
    <string name="accessibility_clearbirthday">Clear Birthday</string>
    <string name="accessibility_savecontact">Save Contact</string>
    <string name="accessibility_discardedits">Discard Edits</string>
    <string name="accessibility_nocontactsfound">No Contacts Found</string>

    <!-- Actions -->
    <string name="action_edit">Edit Contact</string>
    <string name="action_delete">Delete Contact</string>
    <string name="action_selectphoto">Select Photo</string>
    <string name="action_addcontact">Add Contact</string>
    <string name="action_search">Search Contacts</string>
    <string name="action_search_hint">Search</string>
    <string name="action_about">About</string>
    <string name="action_okay">Okay</string>
    <string name="action_yes">Yes</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_sort">Sort</string>
    <string name="action_call">Call</string>
    <string name="action_sendsms">Message</string>
    <string name="action_invalidemail">Invalid Email</string>

    <!-- Sort Options -->
    <string name="text_sortoptions">Sort Options</string>

    <!-- Contact Information -->
    <string name="text_phone_mobile">Mobile</string>
    <string name="text_phone_work">Work</string>
    <string name="text_phone_home">Home</string>
    <string name="text_address">Address</string>
    <string name="text_addressline1">Address Line 1</string>
    <string name="text_addressline2">Address Line 2</string>
    <string name="text_addressline3">Address Line 3</string>
    <string name="text_addressline4">Address Line 4</string>
    <string name="text_email">Email</string>
    <string name="text_birthday">Birthday</string>
    <string name="text_name">Name</string>
    <string name="text_firstname">First Name</string>
    <string name="text_lastname">Last Name</string>

    <!-- Fake info -->
    <string name="text_fakefullname">John Smith</string>
    <string name="text_fakenumber">096008333</string>
    <string name="text_fakeemail">akshaykalyan@outlook.com</string>
    <string name="text_fakeaddressline1">6 Berkeley Grove</string>
    <string name="text_fakeaddressline2">Bethlehem</string>
    <string name="text_fakeaddressline3">Tauranga</string>
    <string name="text_fakebirthday">25-12-1993</string>
    <string name="emptystring"></string>

    <!-- About Dialog -->
    <string name="text_about_by">By Akshay Kalyan</string>

    <!-- Confirm Delete Dialog -->
    <string name="dialog_confirmdelete_title">Comfirm Delete</string>
    <string name="dialog_confirmdelete_message">Are you sure you want to permanently remove this contact?</string>

    <!-- Select Image Dialog -->
    <string name="dialog_selectimage_title">Select Image Source</string>

    <!-- Toast Messages -->
    <string name="toast_editsdiscarded">Edits Discarded</string>
    <string name="toast_contactsaved">Contact Saved</string>
    <string name="toast_contactremoved">Contact Removed</string>
    <string name="toast_error">Error</string>
    

</resources>
