<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about"
        android:icon="@drawable/ic_about_i"
        />

    <item
        android:id="@+id/action_add_contact"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:icon="@drawable/ic_addcontact"
        android:title="@string/action_addcontact"
        />
    
    <item
        android:id="@+id/action_sortoptions"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/action_sort"/>
    
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="1"
        android:showAsAction="ifRoom|collapseActionView"
        android:actionLayout="@layout/custom_view_search_edit_text"
    />
    

</menu>
