<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_grey"
    
    
    >
    
    <LinearLayout 
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
   		android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">
	    
	    <RelativeLayout
	    android:layout_width="fill_parent"
	    android:padding="0dp" 
	    android:layout_height="@dimen/card_listview_height"
	    style="@style/card_contactlistview"
	    android:clickable="true"
	    android:onClick="goToContactInfo">
	    <ImageView
	        android:id="@+id/icon"
	        android:layout_width="@dimen/card_listview_height"
	        android:layout_height="@dimen/card_listview_height"
	        
	        android:contentDescription="@string/accessibility_contactphoto"
	        android:focusable="true"
	        android:paddingBottom="2dp"
	        android:paddingLeft="0dp"
	        android:paddingRight="0dp"
	        android:paddingTop="0dp"
	        android:scaleType="centerCrop"
	        android:src="@drawable/stockphoto_happy_male" />
	    <TextView
	        android:id="@+id/testingTextView"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_toRightOf="@id/icon"
	        android:paddingLeft="30dp"
	        android:gravity="center_vertical"
	        android:text="@string/text_fakefullname"
	        android:textSize="16sp" />
		</RelativeLayout>
		
	    <!-- repeats -->
	    <RelativeLayout
	    android:layout_width="fill_parent"
	    android:padding="0dp" 
	    android:layout_height="@dimen/card_listview_height"
	    style="@style/card_contactlistview">
	    <ImageView
	        android:id="@id/icon"
	        android:layout_width="@dimen/card_listview_height"
	        android:layout_height="@dimen/card_listview_height"
	        
	        android:contentDescription="@string/accessibility_contactphoto"
	        android:focusable="true"
	        android:paddingBottom="2dp"
	        android:paddingLeft="0dp"
	        android:paddingRight="0dp"
	        android:paddingTop="0dp"
	        android:scaleType="centerCrop"
	        android:src="@drawable/stockphoto_happy_male" />
	    <TextView
	        android:id="@id/testingTextView"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_toRightOf="@id/icon"
	        android:paddingLeft="30dp"
	        android:gravity="center_vertical"
	        android:text="@string/text_fakefullname"
	        android:textSize="16sp" />
		</RelativeLayout>
		
	    <RelativeLayout
	    android:layout_width="fill_parent"
	    android:padding="0dp" 
	    android:layout_height="@dimen/card_listview_height"
	    style="@style/card_contactlistview">
	    <ImageView
	        android:id="@id/icon"
	        android:layout_width="@dimen/card_listview_height"
	        android:layout_height="@dimen/card_listview_height"
	        
	        android:contentDescription="@string/accessibility_contactphoto"
	        android:focusable="true"
	        android:paddingBottom="2dp"
	        android:paddingLeft="0dp"
	        android:paddingRight="0dp"
	        android:paddingTop="0dp"
	        android:scaleType="centerCrop"
	        android:src="@drawable/stockphoto_happy_male" />
	    <TextView
	        android:id="@id/testingTextView"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_toRightOf="@id/icon"
	        android:paddingLeft="30dp"
	        android:gravity="center_vertical"
	        android:text="@string/text_fakefullname"
	        android:textSize="16sp" />
		</RelativeLayout>
		
	    <RelativeLayout
	    android:layout_width="fill_parent"
	    android:padding="0dp" 
	    android:layout_height="@dimen/card_listview_height"
	    style="@style/card_contactlistview">
	    <ImageView
	        android:id="@id/icon"
	        android:layout_width="@dimen/card_listview_height"
	        android:layout_height="@dimen/card_listview_height"
	        
	        android:contentDescription="@string/accessibility_contactphoto"
	        android:focusable="true"
	        android:paddingBottom="2dp"
	        android:paddingLeft="0dp"
	        android:paddingRight="0dp"
	        android:paddingTop="0dp"
	        android:scaleType="centerCrop"
	        android:src="@drawable/stockphoto_happy_male" />
	    <TextView
	        android:id="@id/testingTextView"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_toRightOf="@id/icon"
	        android:paddingLeft="30dp"
	        android:gravity="center_vertical"
	        android:text="@string/text_fakefullname"
	        android:textSize="16sp" />
		</RelativeLayout>
		
	    <RelativeLayout
	    android:layout_width="fill_parent"
	    android:padding="0dp" 
	    android:layout_height="@dimen/card_listview_height"
	    style="@style/card_contactlistview">
	    <ImageView
	        android:id="@id/icon"
	        android:layout_width="@dimen/card_listview_height"
	        android:layout_height="@dimen/card_listview_height"
	        
	        android:contentDescription="@string/accessibility_contactphoto"
	        android:focusable="true"
	        android:paddingBottom="2dp"
	        android:paddingLeft="0dp"
	        android:paddingRight="0dp"
	        android:paddingTop="0dp"
	        android:scaleType="centerCrop"
	        android:src="@drawable/stockphoto_happy_male" />
	    <TextView
	        android:id="@id/testingTextView"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_toRightOf="@id/icon"
	        android:paddingLeft="30dp"
	        android:gravity="center_vertical"
	        android:text="@string/text_fakefullname"
	        android:textSize="16sp" />
		</RelativeLayout>
		
	    <RelativeLayout
	    android:layout_width="fill_parent"
	    android:padding="0dp" 
	    android:layout_height="@dimen/card_listview_height"
	    style="@style/card_contactlistview">
	    <ImageView
	        android:id="@id/icon"
	        android:layout_width="@dimen/card_listview_height"
	        android:layout_height="@dimen/card_listview_height"
	        
	        android:contentDescription="@string/accessibility_contactphoto"
	        android:focusable="true"
	        android:paddingBottom="2dp"
	        android:paddingLeft="0dp"
	        android:paddingRight="0dp"
	        android:paddingTop="0dp"
	        android:scaleType="centerCrop"
	        android:src="@drawable/stockphoto_happy_male" />
	    <TextView
	        android:id="@id/testingTextView"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_toRightOf="@id/icon"
	        android:paddingLeft="30dp"
	        android:gravity="center_vertical"
	        android:text="@string/text_fakefullname"
	        android:textSize="16sp" />
		</RelativeLayout>
		
	    <RelativeLayout
	    android:layout_width="fill_parent"
	    android:padding="0dp" 
	    android:layout_height="@dimen/card_listview_height"
	    style="@style/card_contactlistview">
	    <ImageView
	        android:id="@id/icon"
	        android:layout_width="@dimen/card_listview_height"
	        android:layout_height="@dimen/card_listview_height"
	        
	        android:contentDescription="@string/accessibility_contactphoto"
	        android:focusable="true"
	        android:paddingBottom="2dp"
	        android:paddingLeft="0dp"
	        android:paddingRight="0dp"
	        android:paddingTop="0dp"
	        android:scaleType="centerCrop"
	        android:src="@drawable/stockphoto_happy_male" />
	    <TextView
	        android:id="@id/testingTextView"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_toRightOf="@id/icon"
	        android:paddingLeft="30dp"
	        android:gravity="center_vertical"
	        android:text="@string/text_fakefullname"
	        android:textSize="16sp" />
		</RelativeLayout>
		
	    
		
	    <Button 
	        android:id="@+id/my_fragment_editbutton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/action_edit"
	        />
	    
	    <Button 
	        android:id="@+id/my_fragment_contactinfobutton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/hello_world"
	        />

	</LinearLayout>
</ScrollView>
